syntax = "proto3";

package blockjoy.api.ui_v1;

import "common.proto";

message GetHostsRequest {
  RequestMeta meta = 1;

  oneof param {
    string id = 2;
    string token = 3;
  }
}

message GetHostsResponse {
  ResponseMeta meta = 1;
  repeated Host hosts = 2;
}

message CreateHostRequest {
  RequestMeta meta = 1;
  string name = 2;
  optional string version = 3;
  optional string location = 4;
  optional uint64 cpu_count = 5;
  optional uint64 mem_size = 6;
  optional uint64 disk_size = 7;
  optional string os = 8;
  optional string os_version = 9;
  string ip_addr = 10;
  string ip_range_from = 11;
  string ip_range_to = 12;
  string ip_gateway = 13;
}

message CreateHostResponse {
  ResponseMeta meta = 1;
}

message UpdateHostRequest {
  RequestMeta meta = 1;
  
  string id = 2;
  optional string name = 3;
  optional string version = 4;
  optional string location = 5;
  optional string os = 6;
  optional string os_version = 7;
}

message UpdateHostResponse {
  ResponseMeta meta = 1;
}

message DeleteHostRequest {
  RequestMeta meta = 1;
  string id = 2;
}

message DeleteHostResponse {
  ResponseMeta meta = 1;
}

message ProvisionHostRequest {
  enum ConnectionStatus {
    CONNECTION_STATUS_UNSPECIFIED = 0;
    CONNECTION_STATUS_ONLINE = 1;
    CONNECTION_STATUS_OFFLINE = 2;
  }

  string request_id = 1;
  string otp = 2;
  ConnectionStatus status = 3;
  string name = 4;
  string version = 5;
  int64 cpu_count = 6;
  // The amount of memory in bytes that the host has.
  int64 mem_size_bytes = 7;
  // The amount of disk space in bytes that the host has.
  int64 disk_size_bytes = 8;
  string os = 9;
  string os_version = 10;
  string ip = 11;
}

message ProvisionHostResponse {
  string host_id = 1;
  string token = 2;
  repeated string messages = 3;
  string origin_request_id = 4;
}

// Manage hosts
service HostService {
  // Get host(s) by id, org_id or token or just every host
  rpc Get(GetHostsRequest) returns (GetHostsResponse);
  // Create a single host
  rpc Create(CreateHostRequest) returns (CreateHostResponse);
  // Update a single host
  rpc Update(UpdateHostRequest) returns (UpdateHostResponse);
  // Delete a single host
  rpc Delete(DeleteHostRequest) returns (DeleteHostResponse);
  // This endpoint creates a new host from an already created host provision.
  rpc Provision(ProvisionHostRequest) returns (ProvisionHostResponse);
}
